Make the Twitter page more readable on mobile, fix issue where a green stripe was appearing on home

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -69,7 +69,8 @@ h1
   .molly-and-max
     float: none
     text-align: center
-    margin: 10px 0
+    padding: 10px 0
+    margin: 0
     height: auto
     width: auto
     shape-outside: none
