--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -81,6 +81,7 @@ h1, h2, h3, h4, h5, h6
   text-align: center
   
   img
+    width: 100%
     max-width: 500px
 
 // ----- FOOTER -------------------
@@ -132,7 +133,8 @@ dd
   margin: 0
 
 .faq-answer
-  margin-left: 20px
+  border-left: 1px solid $grey
+  padding-left: 20px
 
 .faq-accordions
   margin: 20px
@@ -166,5 +168,15 @@ dd
       flex-direction: column
       align-items: center
       padding-top: 10px
+  
+  .content-box
+    padding: 20px
+
   .line-with-year
     flex-direction: column
+
+  .faq-answer
+    padding-left: 10px
+
+  .faq-accordions
+    margin: 10px 0
