--- a/src/sass/tokens.sass
+++ b/src/sass/tokens.sass
@@ -10,6 +10,7 @@ $bold-font-weight: 400
 // Colors
 $black: #000000
 $white: #FFFFFF
+$grey: #CCCCCC
 $light-green: #96B78A
 $light-green-semi-opaque: rgb(150, 183, 138, 0.5) 
 
